add keyboard spacer

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "babel-preset-expo": "~8.1.0",
     "eslint": "^7.5.0",
     "eslint-config-handlebarlabs": "^0.0.6",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "react-devtools": "^4.8.2"
   },
   "private": true
 }
